# foxsur-rs

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: ci.yml
db/: init.sql
foxsur/: Cargo.toml
foxsur/src/: main.rs
foxsur/src/cli/: mod.rs  options.rs
foxsur/src/database/: asset.rs  instrument.rs  mod.rs
foxsur/src/instruments/: deribit.rs  mod.rs  paxos.rs
foxsur/src/sources/: deribit.rs  kraken.rs  mod.rs  rest_source.rs
psql/: Cargo.toml
psql/src/: lib.rs
src/: main.rs  options.rs
src/cli/: mod.rs  options.rs
src/database/: asset.rs  instrument.rs  mod.rs
src/instruments/: deribit.rs  kraken.rs  mod.rs  paxos.rs
src/messaging/: mod.rs  slack.rs
src/sources/: mod.rs  rest_source.rs
src/sources/deribit/: mod.rs
src/sources/paxos/: mod.rs
testdata/: mapping.json
