[package]
name = "foxsur-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
env_logger = "0.10.0"
futures = "0.3.27"
futures-util = "0.3.27"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
serde-env = "0.1.1"
serde_json = "1.0.94"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.26.0", features = ["full"] }
