[package]
name = "foxsur-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.14", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.17"
postgres = { version = "0.19.5" }
regex = "1.7.3"
reqwest = { version = "0.11.15", features = ["json", "blocking"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
psql = { path = "../psql" }
