[package]
name = "foxsur-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4.20"
postgres = { version = "0.19.7" }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
psql = { path = "../psql" }
